header logo is added

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Admin Dashboard</title>
+  <link rel="icon" href="static/image/college-logo.png">
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ url_for('static', filename='css/admin.css') }}">
