--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Student Dashboard</title>
+  <link rel="icon" href="static/image/college-logo.png">
 
   <link rel="stylesheet" href="{{ url_for('static', filename='css/dashboard.css') }}">
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
