--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Login</title>
+  <link rel="icon" href="static/image/college-logo.png">
 
   <!-- Flask-safe CSS -->
   <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
